header, nav done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </header>
         <main>
             <article>
-                <h2>Meilleur Film</h2>
+                <h2>Titre du Meilleur Film</h2>
             </article>
             <article>
                 <h2>Meilleurs Films</h2>
