modal with title

--- a/index.html
+++ b/index.html
@@ -72,15 +72,23 @@
                     <figure></figure>
                 </article>
             </section>
-            <button id="myBtn">Open Modal</button>
-            <!-- The Modal -->
-            <div id="myModal" class="modal">
+            <section class="modal">
                 <!-- Modal content -->
-                <div class="modal-content">
-                    <span class="close">&times;</span>
-                    <p>Some text in the Modal..</p>
-                </div>
-            </div>
+                <article class="modal-content">
+                    <div>
+                        <span class="close">&times;</span>
+                        <h3>Titre: </h3>
+                    </div>
+                    <div class="modal-data">
+                        <ul>
+                            <li></li>
+                        </ul>
+                        <figure>
+                            <img alt="Image du Film" src="">
+                        </figure>
+                    </div>
+                </article>
+            </section>
         </main>
         <footer>
             <script src="./script.js"></script>
