all data loaded, need to fix modal data loading

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <button>Lecture</button>
                     <p class="best description">Desciption</p>
                 </article>
-                <figure>
+                <figure class="best">
                     <img alt="Affiche du meilleur Film imdb" src="https://m.media-amazon.com/images/M/MV5BNTY4ZDk5MzYtNjk2Zi00ZWY3LTgwZjUtNDc5MWEzMWFlOTQzXkEyXkFqcGdeQXVyNjU1MTEwMjI@._V1_UY268_CR1,0,182,268_AL_.jpg">
                 </figure>
             </section>
@@ -35,41 +35,82 @@
                 <article>
                     <h2>Films les mieux Notés</h2>
                     <div class="diaporama">
-                        <figure class="bests one">
+                        <div class="control">
+                            <button>&lang;</button>
+                        </div>
+                        <div class="galery best">
                             <img alt="Second meilleur Film imdb" src="">
-                        </figure>
-                        <figure class="bests two">
                             <img alt="Troisième meilleur Film imdb" src="">
-                        </figure>
-                        <figure class="bests three">
                             <img alt="Quatriième meilleur Film imdb" src="">
-                        </figure>
-                        <figure class="bests four">
                             <img alt="Cinquième meilleur Film imdb" src="">
-                        </figure>
-                        <figure class="bests five">
                             <img alt="Sixième meilleur Film imdb" src="">
-                        </figure>
-                        <figure class="bests six">
                             <img alt="Septième meilleur Film imdb" src="">
-                        </figure>
-                        <figure class="bests seven">
                             <img alt="Huitième meilleur Film imdb" src="">
-                        </figure>
+                        </div>
+                        <div class="control">
+                            <button>&rang;</button>
+                        </div>
                     </div>
-                    <figure></figure>
                 </article>
                 <article>
-                    <h2>Catégorie 1</h2>
-                    <figure></figure>
+                    <h2>Catégorie Animation</h2>
+                    <div class="diaporama">
+                        <div class="control">
+                            <button>&lang;</button>
+                        </div>
+                        <div class="galery animation">
+                            <img alt="Meilleur Film d'Animation imdb" src="">
+                            <img alt="Deuxième meilleur Film d'Animation imdb" src="">
+                            <img alt="Troisième meilleur Film d'Animation imdb" src="">
+                            <img alt="Quatriième meilleur Film d'Animation imdb" src="">
+                            <img alt="Cinquième meilleur Film d'Animation imdb" src="">
+                            <img alt="Sixième meilleur Film d'Animation imdb" src="">
+                            <img alt="Septième meilleur Film d'Animation imdb" src="">
+                        </div>
+                        <div class="control">
+                            <button>&rang;</button>
+                        </div>
+                    </div>
                 </article>
                 <article>
-                    <h2>Catégorie 2</h2>
-                    <figure></figure>
+                    <h2>Catégorie Fantasy</h2>
+                    <div class="diaporama">
+                        <div class="control">
+                            <button>&lang;</button>
+                        </div>
+                        <div class="galery fantasy">
+                            <img alt="Meilleur Film d'Animation imdb" src="">
+                            <img alt="Deuxième meilleur Film d'Animation imdb" src="">
+                            <img alt="Troisième meilleur Film d'Animation imdb" src="">
+                            <img alt="Quatriième meilleur Film d'Animation imdb" src="">
+                            <img alt="Cinquième meilleur Film d'Animation imdb" src="">
+                            <img alt="Sixième meilleur Film d'Animation imdb" src="">
+                            <img alt="Septième meilleur Film d'Animation imdb" src="">
+                        </div>
+                        <div class="control">
+                            <button>&rang;</button>
+                        </div>
+                    </div>
                 </article>
                 <article>
-                    <h2>Catégorie 3</h2>
-                    <figure></figure>
+                    <h2>Catégorie Sci-Fi</h2>
+                    <div class="diaporama">
+                        <div class="control">
+                            <button>&lang;</button>
+                        </div>
+                        <div class="galery sci-fi">
+                            <img alt="Meilleur Film de Science Fiction imdb" src="">
+                            <img alt="Deuxième meilleur Film de Science Fiction imdb" src="">
+                            <img alt="Troisième meilleur Film de Science Fiction imdb" src="">
+                            <img alt="Quatriième meilleur Film de Science Fiction imdb" src="">
+                            <img alt="Cinquième meilleur Film de Science Fiction imdb" src="">
+                            <img alt="Sixième meilleur Film de Science Fiction imdb" src="">
+                            <img alt="Septième meilleur Film de Science Fiction imdb" src="">
+                        </div>
+                        <div class="control">
+                            <button>&rang;</button>
+                        </div>
+                    </div>
                 </article>
             </section>
             <section class="modal">
@@ -81,6 +122,15 @@
                     </div>
                     <div class="modal-data">
                         <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
                             <li></li>
                         </ul>
                         <figure>
