modal ok, buttons ok but need eventhandler

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <article>
                     <h2>Films les mieux Notés</h2>
                     <div class="diaporama">
-                        <div class="control">
+                        <div class="control left">
                             <button>&lang;</button>
                         </div>
                         <div class="galery best">
@@ -47,7 +47,7 @@
                             <img alt="Septième meilleur Film imdb" src="">
                             <img alt="Huitième meilleur Film imdb" src="">
                         </div>
-                        <div class="control">
+                        <div class="control right">
                             <button>&rang;</button>
                         </div>
                     </div>
@@ -55,7 +55,7 @@
                 <article>
                     <h2>Catégorie Animation</h2>
                     <div class="diaporama">
-                        <div class="control">
+                        <div class="control left">
                             <button>&lang;</button>
                         </div>
                         <div class="galery animation">
@@ -67,7 +67,7 @@
                             <img alt="Sixième meilleur Film d'Animation imdb" src="">
                             <img alt="Septième meilleur Film d'Animation imdb" src="">
                         </div>
-                        <div class="control">
+                        <div class="control right">
                             <button>&rang;</button>
                         </div>
                     </div>
@@ -75,7 +75,7 @@
                 <article>
                     <h2>Catégorie Fantasy</h2>
                     <div class="diaporama">
-                        <div class="control">
+                        <div class="control left">
                             <button>&lang;</button>
                         </div>
                         <div class="galery fantasy">
@@ -87,7 +87,7 @@
                             <img alt="Sixième meilleur Film d'Animation imdb" src="">
                             <img alt="Septième meilleur Film d'Animation imdb" src="">
                         </div>
-                        <div class="control">
+                        <div class="control right">
                             <button>&rang;</button>
                         </div>
                     </div>
@@ -95,7 +95,7 @@
                 <article>
                     <h2>Catégorie Sci-Fi</h2>
                     <div class="diaporama">
-                        <div class="control">
+                        <div class="control left">
                             <button>&lang;</button>
                         </div>
                         <div class="galery sci-fi">
@@ -107,7 +107,7 @@
                             <img alt="Sixième meilleur Film de Science Fiction imdb" src="">
                             <img alt="Septième meilleur Film de Science Fiction imdb" src="">
                         </div>
-                        <div class="control">
+                        <div class="control right">
                             <button>&rang;</button>
                         </div>
                     </div>
