scrolling ok, focus on image missing

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <h2>Films les mieux Notés</h2>
                     <div class="diaporama">
                         <div class="control left">
-                            <button>&lang;</button>
+                            <button name="best">&lang;</button>
                         </div>
                         <div class="galery best">
                             <img alt="Second meilleur Film imdb" src="">
@@ -48,7 +48,7 @@
                             <img alt="Huitième meilleur Film imdb" src="">
                         </div>
                         <div class="control right">
-                            <button>&rang;</button>
+                            <button name="best">&rang;</button>
                         </div>
                     </div>
                 </article>
@@ -56,7 +56,7 @@
                     <h2>Catégorie Animation</h2>
                     <div class="diaporama">
                         <div class="control left">
-                            <button>&lang;</button>
+                            <button name="animation" value="0">&lang;</button>
                         </div>
                         <div class="galery animation">
                             <img alt="Meilleur Film d'Animation imdb" src="">
@@ -68,7 +68,7 @@
                             <img alt="Septième meilleur Film d'Animation imdb" src="">
                         </div>
                         <div class="control right">
-                            <button>&rang;</button>
+                            <button name="animation">&rang;</button>
                         </div>
                     </div>
                 </article>
@@ -76,7 +76,7 @@
                     <h2>Catégorie Fantasy</h2>
                     <div class="diaporama">
                         <div class="control left">
-                            <button>&lang;</button>
+                            <button name="fantasy">&lang;</button>
                         </div>
                         <div class="galery fantasy">
                             <img alt="Meilleur Film d'Animation imdb" src="">
@@ -88,7 +88,7 @@
                             <img alt="Septième meilleur Film d'Animation imdb" src="">
                         </div>
                         <div class="control right">
-                            <button>&rang;</button>
+                            <button name="fantasy">&rang;</button>
                         </div>
                     </div>
                 </article>
@@ -96,7 +96,7 @@
                     <h2>Catégorie Sci-Fi</h2>
                     <div class="diaporama">
                         <div class="control left">
-                            <button>&lang;</button>
+                            <button name="sci-fi">&lang;</button>
                         </div>
                         <div class="galery sci-fi">
                             <img alt="Meilleur Film de Science Fiction imdb" src="">
@@ -108,7 +108,7 @@
                             <img alt="Septième meilleur Film de Science Fiction imdb" src="">
                         </div>
                         <div class="control right">
-                            <button>&rang;</button>
+                            <button name="sci-fi">&rang;</button>
                         </div>
                     </div>
                 </article>
