scroll ok, moda ok, need divs and breakpoints

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <p class="best description">Desciption</p>
                 </article>
                 <figure class="best">
-                    <img alt="Affiche du meilleur Film imdb" src="https://m.media-amazon.com/images/M/MV5BNTY4ZDk5MzYtNjk2Zi00ZWY3LTgwZjUtNDc5MWEzMWFlOTQzXkEyXkFqcGdeQXVyNjU1MTEwMjI@._V1_UY268_CR1,0,182,268_AL_.jpg">
+                    <img alt="Affiche du meilleur Film imdb" tabindex=0 src="">
                 </figure>
             </section>
             <section>
@@ -36,19 +36,19 @@
                     <h2>Films les mieux Notés</h2>
                     <div class="diaporama">
                         <div class="control left">
-                            <button name="best">&lang;</button>
+                            <button class="best">&lang;</button>
                         </div>
                         <div class="galery best">
-                            <img alt="Second meilleur Film imdb" src="">
-                            <img alt="Troisième meilleur Film imdb" src="">
-                            <img alt="Quatriième meilleur Film imdb" src="">
-                            <img alt="Cinquième meilleur Film imdb" src="">
-                            <img alt="Sixième meilleur Film imdb" src="">
-                            <img alt="Septième meilleur Film imdb" src="">
-                            <img alt="Huitième meilleur Film imdb" src="">
+                            <img alt="Second meilleur Film imdb" tabindex=0 src="">
+                            <img alt="Troisième meilleur Film imdb" tabindex=0 src="">
+                            <img alt="Quatriième meilleur Film imdb" tabindex=0 src="">
+                            <img alt="Cinquième meilleur Film imdb" tabindex=0 src="">
+                            <img alt="Sixième meilleur Film imdb" tabindex=0 src="">
+                            <img alt="Septième meilleur Film imdb" tabindex=0 src="">
+                            <img alt="Huitième meilleur Film imdb" tabindex=0 src="">
                         </div>
                         <div class="control right">
-                            <button name="best">&rang;</button>
+                            <button class="best">&rang;</button>
                         </div>
                     </div>
                 </article>
@@ -56,19 +56,19 @@
                     <h2>Catégorie Animation</h2>
                     <div class="diaporama">
                         <div class="control left">
-                            <button name="animation" value="0">&lang;</button>
+                            <button class="animation" value="0">&lang;</button>
                         </div>
                         <div class="galery animation">
-                            <img alt="Meilleur Film d'Animation imdb" src="">
-                            <img alt="Deuxième meilleur Film d'Animation imdb" src="">
-                            <img alt="Troisième meilleur Film d'Animation imdb" src="">
-                            <img alt="Quatriième meilleur Film d'Animation imdb" src="">
-                            <img alt="Cinquième meilleur Film d'Animation imdb" src="">
-                            <img alt="Sixième meilleur Film d'Animation imdb" src="">
-                            <img alt="Septième meilleur Film d'Animation imdb" src="">
+                            <img alt="Meilleur Film d'Animation imdb" tabindex=0 src="">
+                            <img alt="Deuxième meilleur Film d'Animation imdb" tabindex=0 src="">
+                            <img alt="Troisième meilleur Film d'Animation imdb" tabindex=0 src="">
+                            <img alt="Quatriième meilleur Film d'Animation imdb" tabindex=0 src="">
+                            <img alt="Cinquième meilleur Film d'Animation imdb" tabindex=0 src="">
+                            <img alt="Sixième meilleur Film d'Animation imdb" tabindex=0 src="">
+                            <img alt="Septième meilleur Film d'Animation imdb" tabindex=0 src="">
                         </div>
                         <div class="control right">
-                            <button name="animation">&rang;</button>
+                            <button class="animation">&rang;</button>
                         </div>
                     </div>
                 </article>
@@ -76,19 +76,19 @@
                     <h2>Catégorie Fantasy</h2>
                     <div class="diaporama">
                         <div class="control left">
-                            <button name="fantasy">&lang;</button>
+                            <button class="fantasy">&lang;</button>
                         </div>
                         <div class="galery fantasy">
-                            <img alt="Meilleur Film d'Animation imdb" src="">
-                            <img alt="Deuxième meilleur Film d'Animation imdb" src="">
-                            <img alt="Troisième meilleur Film d'Animation imdb" src="">
-                            <img alt="Quatriième meilleur Film d'Animation imdb" src="">
-                            <img alt="Cinquième meilleur Film d'Animation imdb" src="">
-                            <img alt="Sixième meilleur Film d'Animation imdb" src="">
-                            <img alt="Septième meilleur Film d'Animation imdb" src="">
+                            <img alt="Meilleur Film d'Animation imdb" tabindex=0 src="">
+                            <img alt="Deuxième meilleur Film d'Animation imdb" tabindex=0 src="">
+                            <img alt="Troisième meilleur Film d'Animation imdb" tabindex=0 src="">
+                            <img alt="Quatriième meilleur Film d'Animation imdb" tabindex=0 src="">
+                            <img alt="Cinquième meilleur Film d'Animation imdb" tabindex=0 src="">
+                            <img alt="Sixième meilleur Film d'Animation imdb" tabindex=0 src="">
+                            <img alt="Septième meilleur Film d'Animation imdb" tabindex=0 src="">
                         </div>
                         <div class="control right">
-                            <button name="fantasy">&rang;</button>
+                            <button class="fantasy">&rang;</button>
                         </div>
                     </div>
                 </article>
@@ -96,19 +96,19 @@
                     <h2>Catégorie Sci-Fi</h2>
                     <div class="diaporama">
                         <div class="control left">
-                            <button name="sci-fi">&lang;</button>
+                            <button class="sci-fi">&lang;</button>
                         </div>
                         <div class="galery sci-fi">
-                            <img alt="Meilleur Film de Science Fiction imdb" src="">
-                            <img alt="Deuxième meilleur Film de Science Fiction imdb" src="">
-                            <img alt="Troisième meilleur Film de Science Fiction imdb" src="">
-                            <img alt="Quatriième meilleur Film de Science Fiction imdb" src="">
-                            <img alt="Cinquième meilleur Film de Science Fiction imdb" src="">
-                            <img alt="Sixième meilleur Film de Science Fiction imdb" src="">
-                            <img alt="Septième meilleur Film de Science Fiction imdb" src="">
+                            <img alt="Meilleur Film de Science Fiction imdb" tabindex=0 src="">
+                            <img alt="Deuxième meilleur Film de Science Fiction imdb" tabindex=0 src="">
+                            <img alt="Troisième meilleur Film de Science Fiction imdb" tabindex=0 src="">
+                            <img alt="Quatriième meilleur Film de Science Fiction imdb" tabindex=0 src="">
+                            <img alt="Cinquième meilleur Film de Science Fiction imdb" tabindex=0 src="">
+                            <img alt="Sixième meilleur Film de Science Fiction imdb" tabindex=0 src="">
+                            <img alt="Septième meilleur Film de Science Fiction imdb" tabindex=0 src="">
                         </div>
                         <div class="control right">
-                            <button name="sci-fi">&rang;</button>
+                            <button class="sci-fi">&rang;</button>
                         </div>
                     </div>
                 </article>
@@ -117,7 +117,7 @@
                 <!-- Modal content -->
                 <article class="modal-content">
                     <div>
-                        <span class="close">&times;</span>
+                        <button class="close">&times;</button>
                         <h3>Titre: </h3>
                     </div>
                     <div class="modal-data">
