--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                         </div>
                     </div>
                 </article>
+                <div class="linebreak">
+                    <div></div>
+                </div>
                 <article>
                     <h2>Catégorie Animation</h2>
                     <div class="diaporama">
@@ -72,6 +75,9 @@
                         </div>
                     </div>
                 </article>
+                <div class="linebreak">
+                    <div></div>
+                </div>
                 <article>
                     <h2>Catégorie Fantasy</h2>
                     <div class="diaporama">
@@ -92,6 +98,9 @@
                         </div>
                     </div>
                 </article>
+                <div class="linebreak">
+                    <div></div>
+                </div>
                 <article>
                     <h2>Catégorie Sci-Fi</h2>
                     <div class="diaporama">
@@ -113,6 +122,9 @@
                     </div>
                 </article>
             </section>
+            <div class="linebreak">
+                <div></div>
+            </div>
             <section class="modal">
                 <!-- Modal content -->
                 <article class="modal-content">
