better liner breaks

--- a/JustStreamIt.html
+++ b/JustStreamIt.html
@@ -86,12 +86,12 @@
                         </div>
                         <div class="galery fantasy">
                             <img alt="Meilleur Film d'Animation imdb" tabindex="0" src="https://m.media-amazon.com/images/M/MV5BNjllNTdmYzItM2IwZi00OGIzLWJmZGItZDNiNjNjOGUyMzM5XkEyXkFqcGdeQXVyOTY3MzgxNTE@._V1_UY268_CR3,0,182,268_AL_.jpg" name="http://localhost:8000/api/v1/titles/10218912">
-                            <img alt="Deuxième meilleur Film d'Animation imdb" tabindex="0" src="JustStreamIt_fichiers/MV5BNjNiYTIwYmUtZDlmYy00MWMxLWI0OTAtMmRkODdlMTM1ZTVmXkEyXkFq.jpg" name="http://localhost:8000/api/v1/titles/11617492">
-                            <img alt="Troisième meilleur Film d'Animation imdb" tabindex="0" src="JustStreamIt_fichiers/MV5BODc0NjViOTUtZWM1Ny00NWQyLTlhNTgtYmYxNTAxNzRkMGEwXkEyXkFq.jpg" name="http://localhost:8000/api/v1/titles/259261">
-                            <img alt="Quatriième meilleur Film d'Animation imdb" tabindex="0" src="JustStreamIt_fichiers/MV5BYmU1NDRjNDgtMzhiMi00NjZmLTg5NGItZDNiZjU5NTU4OTE0XkEyXkFq.jpg" name="http://localhost:8000/api/v1/titles/80684">
-                            <img alt="Cinquième meilleur Film d'Animation imdb" tabindex="0" src="JustStreamIt_fichiers/MV5BMjM5NzgyNTctZDFiOS00NjY5LTliNDctMWRjOTdjZDk4MmUwXkEyXkFq.jpg" name="http://localhost:8000/api/v1/titles/5575408">
-                            <img alt="Sixième meilleur Film d'Animation imdb" tabindex="0" src="JustStreamIt_fichiers/MV5BZjc4NDZhZWMtNGEzYS00ZWU2LThlM2ItNTA0YzQ0OTExMTE2XkEyXkFq.jpg" name="http://localhost:8000/api/v1/titles/38650">
-                            <img alt="Septième meilleur Film d'Animation imdb" tabindex="0" src="JustStreamIt_fichiers/MV5BNzVlY2MwMjktM2E4OS00Y2Y3LWE3ZjctYzhkZGM3YzA1ZWM2XkEyXkFq.jpg" name="http://localhost:8000/api/v1/titles/76759">
+                            <img alt="Deuxième meilleur Film d'Animation imdb" tabindex="0" src="https://m.media-amazon.com/images/M/MV5BNjNiYTIwYmUtZDlmYy00MWMxLWI0OTAtMmRkODdlMTM1ZTVmXkEyXkFqcGdeQXVyNDcwNDE0Nzk@._V1_UX182_CR0,0,182,268_AL_.jpg" name="http://localhost:8000/api/v1/titles/11617492">
+                            <img alt="Troisième meilleur Film d'Animation imdb" tabindex="0" src="https://m.media-amazon.com/images/M/MV5BODc0NjViOTUtZWM1Ny00NWQyLTlhNTgtYmYxNTAxNzRkMGEwXkEyXkFqcGdeQXVyNjQ1MDcxNzM@._V1_UY268_CR14,0,182,268_AL_.jpg" name="http://localhost:8000/api/v1/titles/259261">
+                            <img alt="Quatriième meilleur Film d'Animation imdb" tabindex="0" src="https://m.media-amazon.com/images/M/MV5BYmU1NDRjNDgtMzhiMi00NjZmLTg5NGItZDNiZjU5NTU4OTE0XkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_UX182_CR0,0,182,268_AL_.jpg" name="http://localhost:8000/api/v1/titles/80684">
+                            <img alt="Cinquième meilleur Film d'Animation imdb" tabindex="0" src="https://m.media-amazon.com/images/M/MV5BMjM5NzgyNTctZDFiOS00NjY5LTliNDctMWRjOTdjZDk4MmUwXkEyXkFqcGdeQXVyNjc3MjQzNTI@._V1_UX182_CR0,0,182,268_AL_.jpg" name="http://localhost:8000/api/v1/titles/5575408">
+                            <img alt="Sixième meilleur Film d'Animation imdb" tabindex="0" src="https://m.media-amazon.com/images/M/MV5BZjc4NDZhZWMtNGEzYS00ZWU2LThlM2ItNTA0YzQ0OTExMTE2XkEyXkFqcGdeQXVyNjUwMzI2NzU@._V1_UY268_CR1,0,182,268_AL_.jpg" name="http://localhost:8000/api/v1/titles/38650">
+                            <img alt="Septième meilleur Film d'Animation imdb" tabindex="0" src="https://m.media-amazon.com/images/M/MV5BNzVlY2MwMjktM2E4OS00Y2Y3LWE3ZjctYzhkZGM3YzA1ZWM2XkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_UX182_CR0,0,182,268_AL_.jpg" name="http://localhost:8000/api/v1/titles/76759">
                         </div>
                         <div class="control right">
                             <button class="fantasy">⟩</button>
@@ -108,13 +108,13 @@
                             <button class="sci-fi">⟨</button>
                         </div>
                         <div class="galery sci-fi">
-                            <img alt="Meilleur Film de Science Fiction imdb" tabindex="0" src="JustStreamIt_fichiers/MV5BMjAxMzY3NjcxNF5BMl5BanBnXkFtZTcwNTI5OTM0Mw.jpg" name="http://localhost:8000/api/v1/titles/1375666">
-                            <img alt="Deuxième meilleur Film de Science Fiction imdb" tabindex="0" src="JustStreamIt_fichiers/MV5BNzQzOTk3OTAtNDQ0Zi00ZTVkLWI0MTEtMDllZjNkYzNjNTc4L2ltYWdl.jpg" name="http://localhost:8000/api/v1/titles/133093">
-                            <img alt="Troisième meilleur Film de Science Fiction imdb" tabindex="0" src="JustStreamIt_fichiers/MV5BMzIwYzRmZTQtOThhYy00YjIzLThkODEtMjE2MGRjYzY1ODY1XkEyXkFq.jpg" name="http://localhost:8000/api/v1/titles/1795369">
-                            <img alt="Quatriième meilleur Film de Science Fiction imdb" tabindex="0" src="JustStreamIt_fichiers/MV5BZjdkOTU3MDktN2IxOS00OGEyLWFmMjktY2FiMmZkNWIyODZiXkEyXkFq.jpg" name="http://localhost:8000/api/v1/titles/816692">
-                            <img alt="Cinquième meilleur Film de Science Fiction imdb" tabindex="0" src="JustStreamIt_fichiers/MV5BZmU0M2Y1OGUtZjIxNi00ZjBkLTg1MjgtOWIyNThiZWIwYjRiXkEyXkFq.jpg" name="http://localhost:8000/api/v1/titles/88763">
-                            <img alt="Sixième meilleur Film de Science Fiction imdb" tabindex="0" src="JustStreamIt_fichiers/MV5BMGU2NzRmZjUtOGUxYS00ZjdjLWEwZWItY2NlM2JhNjkxNTFmXkEyXkFq.jpg" name="http://localhost:8000/api/v1/titles/103064">
-                            <img alt="Septième meilleur Film de Science Fiction imdb" tabindex="0" src="JustStreamIt_fichiers/MV5BMjA4NDI0MTIxNF5BMl5BanBnXkFtZTYwNTM0MzY2.jpg" name="http://localhost:8000/api/v1/titles/482571">
+                            <img alt="Meilleur Film de Science Fiction imdb" tabindex="0" src="https://m.media-amazon.com/images/M/MV5BMjAxMzY3NjcxNF5BMl5BanBnXkFtZTcwNTI5OTM0Mw@@._V1_UX182_CR0,0,182,268_AL_.jpg" name="http://localhost:8000/api/v1/titles/1375666">
+                            <img alt="Deuxième meilleur Film de Science Fiction imdb" tabindex="0" src="https://m.media-amazon.com/images/M/MV5BNzQzOTk3OTAtNDQ0Zi00ZTVkLWI0MTEtMDllZjNkYzNjNTc4L2ltYWdlXkEyXkFqcGdeQXVyNjU0OTQ0OTY@._V1_UX182_CR0,0,182,268_AL_.jpg" name="http://localhost:8000/api/v1/titles/133093">
+                            <img alt="Troisième meilleur Film de Science Fiction imdb" tabindex="0" src="https://m.media-amazon.com/images/M/MV5BMzIwYzRmZTQtOThhYy00YjIzLThkODEtMjE2MGRjYzY1ODY1XkEyXkFqcGdeQXVyNTE0MzczOTk@._V1_UY268_CR3,0,182,268_AL_.jpg" name="http://localhost:8000/api/v1/titles/1795369">
+                            <img alt="Quatriième meilleur Film de Science Fiction imdb" tabindex="0" src="https://m.media-amazon.com/images/M/MV5BZjdkOTU3MDktN2IxOS00OGEyLWFmMjktY2FiMmZkNWIyODZiXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_UX182_CR0,0,182,268_AL_.jpg" name="http://localhost:8000/api/v1/titles/816692">
+                            <img alt="Cinquième meilleur Film de Science Fiction imdb" tabindex="0" src="https://m.media-amazon.com/images/M/MV5BZmU0M2Y1OGUtZjIxNi00ZjBkLTg1MjgtOWIyNThiZWIwYjRiXkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_UX182_CR0,0,182,268_AL_.jpg" name="http://localhost:8000/api/v1/titles/88763">
+                            <img alt="Sixième meilleur Film de Science Fiction imdb" tabindex="0" src="https://m.media-amazon.com/images/M/MV5BMGU2NzRmZjUtOGUxYS00ZjdjLWEwZWItY2NlM2JhNjkxNTFmXkEyXkFqcGdeQXVyNjU0OTQ0OTY@._V1_UX182_CR0,0,182,268_AL_.jpg" name="http://localhost:8000/api/v1/titles/103064">
+                            <img alt="Septième meilleur Film de Science Fiction imdb" tabindex="0" src="https://m.media-amazon.com/images/M/MV5BMjA4NDI0MTIxNF5BMl5BanBnXkFtZTYwNTM0MzY2._V1_UX182_CR0,0,182,268_AL_.jpg" name="http://localhost:8000/api/v1/titles/482571">
                         </div>
                         <div class="control right">
                             <button class="sci-fi">⟩</button>
