--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
                             <button class="best">&rang;</button>
                         </div>
                     </div>
+                    <div class="linebreak">
+                        <div class="line">
+                            <div class="scanner"></div>
+                        </div>
+                    </div>
                 </article>
-                <div class="linebreak">
-                    <div></div>
-                </div>
                 <article>
                     <h2>Catégorie Animation</h2>
                     <div class="diaporama">
@@ -74,10 +76,12 @@
                             <button class="animation">&rang;</button>
                         </div>
                     </div>
+                    <div class="linebreak">
+                        <div class="line">
+                            <div class="scanner"></div>
+                        </div>
+                    </div>
                 </article>
-                <div class="linebreak">
-                    <div></div>
-                </div>
                 <article>
                     <h2>Catégorie Fantasy</h2>
                     <div class="diaporama">
@@ -97,10 +101,12 @@
                             <button class="fantasy">&rang;</button>
                         </div>
                     </div>
+                    <div class="linebreak">
+                        <div class="line">
+                            <div class="scanner"></div>
+                        </div>
+                    </div>
                 </article>
-                <div class="linebreak">
-                    <div></div>
-                </div>
                 <article>
                     <h2>Catégorie Sci-Fi</h2>
                     <div class="diaporama">
@@ -120,11 +126,13 @@
                             <button class="sci-fi">&rang;</button>
                         </div>
                     </div>
+                    <div class="linebreak">
+                        <div class="line">
+                            <div class="scanner"></div>
+                        </div>
+                    </div>
                 </article>
             </section>
-            <div class="linebreak">
-                <div></div>
-            </div>
             <section class="modal">
                 <!-- Modal content -->
                 <article class="modal-content">
